--- a/resources/assets/sass/material-kit/_variables.scss
+++ b/resources/assets/sass/material-kit/_variables.scss
@@ -30,6 +30,11 @@ $brand-warning: $yellow !default;
 $brand-info: $light-blue !default;
 $brand-rose: $pink !default;
 
+$state-info-text: $brand-info;
+$state-success-text: $brand-success;
+$state-warning-text: $brand-warning;
+$state-danger-text: $brand-danger;
+
 $border-radius-base: 3px !default;
 $border-radius-small: 2px !default;
 $border-radius-huge: 10px !default;
