--- a/resources/assets/sass/_dropzone.scss
+++ b/resources/assets/sass/_dropzone.scss
@@ -79,4 +79,12 @@
     }
 }
 
+.filezone .dz-link {
+    margin: 0 0 20px;
+    text-align: center;
+    display: none;
 
+    input {
+        text-align: center;
+    }
+}
